[gd_scene load_steps=10 format=3 uid="uid://drskb5jxyoewf"]

[ext_resource type="Script" uid="uid://fy6wggxwcpf1" path="res://barkley2/rooms/_debug/secret_breeding_place/breding_debug.gd" id="1_jps7p"]
[ext_resource type="Theme" uid="uid://bel3c3184om4i" path="res://barkley2/themes/debug/gun_debug.tres" id="1_og2xi"]
[ext_resource type="PackedScene" uid="uid://g1os55vj4wja" path="res://barkley2/rooms/_debug/secret_breeding_place/gun_box.tscn" id="3_tqfm8"]
[ext_resource type="Script" uid="uid://c8dq0iw66bhj8" path="res://barkley2/rooms/_debug/secret_breeding_place/gun_child.gd" id="4_1mg8s"]
[ext_resource type="Script" uid="uid://beydc4wg0myj4" path="res://barkley2/rooms/_debug/secret_breeding_place/gun_parent.gd" id="4_5rms5"]
[ext_resource type="FontFile" uid="uid://bq5ct8srd86o6" path="res://barkley2/resources/fonts/fn5o.tres" id="5_ydw5n"]
[ext_resource type="Script" uid="uid://gg7yyn84cce" path="res://barkley2/rooms/_debug/secret_breeding_place/camera_debug.gd" id="6_ydw5n"]

[sub_resource type="LabelSettings" id="LabelSettings_5rms5"]
font = ExtResource("5_ydw5n")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_b3mt3"]
size = Vector2(49, 24)

[node name="breding_debug" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_og2xi")
script = ExtResource("1_jps7p")

[node name="gun_top" parent="." instance=ExtResource("3_tqfm8")]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 161.0
offset_bottom = 118.0

[node name="gun_top_parent_top" type="PanelContainer" parent="." node_paths=PackedStringArray("my_child")]
layout_mode = 0
offset_left = -154.0
offset_top = 2.0
offset_right = -6.0
offset_bottom = 70.0
script = ExtResource("4_5rms5")
my_child = NodePath("../gun_top")
is_top = true

[node name="gun_container" type="VBoxContainer" parent="gun_top_parent_top"]
layout_mode = 2

[node name="gun_title_lbl" type="Label" parent="gun_top_parent_top/gun_container"]
custom_minimum_size = Vector2(148, 26)
layout_mode = 2
text = "Gun Top"
label_settings = SubResource("LabelSettings_5rms5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="gun_texture" type="TextureRect" parent="gun_top_parent_top/gun_container"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_b3mt3")
stretch_mode = 5

[node name="gun_top_parent_bottom" type="PanelContainer" parent="." node_paths=PackedStringArray("my_child")]
layout_mode = 0
offset_left = -154.0
offset_top = 76.0
offset_right = -6.0
offset_bottom = 144.0
script = ExtResource("4_5rms5")
my_child = NodePath("../gun_top")

[node name="gun_container" type="VBoxContainer" parent="gun_top_parent_bottom"]
layout_mode = 2

[node name="gun_title_lbl" type="Label" parent="gun_top_parent_bottom/gun_container"]
custom_minimum_size = Vector2(148, 26)
layout_mode = 2
text = "Gun Top"
label_settings = SubResource("LabelSettings_5rms5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="gun_texture" type="TextureRect" parent="gun_top_parent_bottom/gun_container"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_b3mt3")
stretch_mode = 5

[node name="gun_bottom" parent="." instance=ExtResource("3_tqfm8")]
layout_mode = 0
offset_left = 223.0
offset_top = 4.0
offset_right = 379.0
offset_bottom = 117.0

[node name="gun_bottom_parent_top" type="PanelContainer" parent="." node_paths=PackedStringArray("my_child")]
layout_mode = 0
offset_left = 390.0
offset_top = 2.0
offset_right = 538.0
offset_bottom = 70.0
script = ExtResource("4_5rms5")
my_child = NodePath("../gun_bottom")
is_top = true

[node name="gun_container" type="VBoxContainer" parent="gun_bottom_parent_top"]
layout_mode = 2

[node name="gun_title_lbl" type="Label" parent="gun_bottom_parent_top/gun_container"]
custom_minimum_size = Vector2(148, 26)
layout_mode = 2
text = "Gun Top"
label_settings = SubResource("LabelSettings_5rms5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="gun_texture" type="TextureRect" parent="gun_bottom_parent_top/gun_container"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_b3mt3")
stretch_mode = 5

[node name="gun_bottom_parent_bottom" type="PanelContainer" parent="." node_paths=PackedStringArray("my_child")]
layout_mode = 0
offset_left = 390.0
offset_top = 76.0
offset_right = 538.0
offset_bottom = 144.0
script = ExtResource("4_5rms5")
my_child = NodePath("../gun_bottom")

[node name="gun_container" type="VBoxContainer" parent="gun_bottom_parent_bottom"]
layout_mode = 2

[node name="gun_title_lbl" type="Label" parent="gun_bottom_parent_bottom/gun_container"]
custom_minimum_size = Vector2(148, 26)
layout_mode = 2
text = "Gun Top"
label_settings = SubResource("LabelSettings_5rms5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="gun_texture" type="TextureRect" parent="gun_bottom_parent_bottom/gun_container"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_b3mt3")
stretch_mode = 5

[node name="gun_child" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 156.0
offset_right = 267.0
offset_bottom = 210.0
script = ExtResource("4_1mg8s")

[node name="gun_container" type="VBoxContainer" parent="gun_child"]
layout_mode = 2

[node name="gun_title_lbl" type="Label" parent="gun_child/gun_container"]
custom_minimum_size = Vector2(148, 26)
layout_mode = 2
text = "Gun Top"
label_settings = SubResource("LabelSettings_5rms5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="gun_texture" type="TextureRect" parent="gun_child/gun_container"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_b3mt3")
stretch_mode = 5

[node name="camera_debug" type="Camera2D" parent="."]
position = Vector2(192, 120)
script = ExtResource("6_ydw5n")
